@@ -23,6 +23,7 @@ import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
 
 import org.apache.commons.codec.binary.Base64;
+import org.apache.commons.lang.CharEncoding;
 import org.xml.sax.XMLReader;
 import org.xml.sax.helpers.XMLReaderFactory;
 import org.xml.sax.SAXException;
@@ -52,7 +53,7 @@ public class Utils {
     static String makeCanonicalString(String method, String resource,
                                              Map headers, String expires)
     {
-        StringBuffer buf = new StringBuffer();
+    	StringBuilder buf = new StringBuilder();
         buf.append(method + "\n");
 
         // Add all interesting headers to a list, then sort them.  "Interesting"
@@ -166,7 +167,7 @@ public class Utils {
     }
 
     static String pathForListOptions(String bucket, String prefix, String marker, Integer maxKeys) {
-        StringBuffer path = new StringBuffer(bucket);
+    	StringBuilder path = new StringBuilder(bucket);
         path.append("?");
 
         // these two params must be url encoded
@@ -181,7 +182,7 @@ public class Utils {
 
     static String urlencode(String unencoded) {
         try {
-            return URLEncoder.encode(unencoded, "UTF-8");
+            return URLEncoder.encode(unencoded, CharEncoding.UTF_8);
         } catch (UnsupportedEncodingException e) {
             // should never happen
             throw new RuntimeException("Could not url encode to UTF-8", e);
@@ -209,7 +210,7 @@ public class Utils {
      * @return String of all headers, with commas.
      */
     private static String concatenateList(List values) {
-        StringBuffer buf = new StringBuffer();
+    	StringBuilder buf = new StringBuilder();
         for (int i = 0, size = values.size(); i < size; ++ i) {
             buf.append(((String)values.get(i)).replaceAll("\n", "").trim());
             if (i != (size - 1)) {
