@@ -9,6 +9,7 @@ package er.extensions.appserver;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileNotFoundException;
+import java.io.FileReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
@@ -35,6 +36,7 @@ import java.util.jar.JarFile;
 
 import javax.xml.parsers.DocumentBuilderFactory;
 
+import org.apache.commons.lang.CharEncoding;
 import org.apache.log4j.Appender;
 import org.apache.log4j.ConsoleAppender;
 import org.apache.log4j.Logger;
@@ -82,6 +84,7 @@ import com.webobjects.foundation.NSRange;
 import com.webobjects.foundation.NSSelector;
 import com.webobjects.foundation.NSSet;
 import com.webobjects.foundation.NSTimestamp;
+import com.webobjects.foundation.development.NSBundleFactory;
 
 import er.extensions.ERXExtensions;
 import er.extensions.ERXFrameworkPrincipal;
@@ -106,7 +109,7 @@ import er.extensions.foundation.ERXPatcher;
 import er.extensions.foundation.ERXProperties;
 import er.extensions.foundation.ERXRuntimeUtilities;
 import er.extensions.foundation.ERXThreadStorage;
-import er.extensions.foundation.ERXTimestampUtility;
+import er.extensions.foundation.ERXTimestampUtilities;
 import er.extensions.localization.ERXLocalizer;
 import er.extensions.migration.ERXMigrator;
 import er.extensions.statistics.ERXStats;
@@ -157,9 +160,6 @@ import er.extensions.statistics.ERXStats;
  * @property er.extensions.ERXApplication.allowMultipleDevInstances
  */
 public abstract class ERXApplication extends ERXAjaxApplication implements ERXGracefulShutdown.GracefulApplication {
-
-	private static Boolean isWO54 = null;
-
 	/** logging support */
 	public static final Logger log = Logger.getLogger(ERXApplication.class);
 
@@ -355,9 +355,10 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	private static Loader _loader;
 
 	/**
-	 * Responsible for classpath munging.
+	 * Responsible for classpath munging and ensuring all bundles are loaded
 	 * 
-	 *
+	 * @property er.extensions.appserver.projectBundleLoading - to see logging this has to be set on the command line by using -Der.extensions.appserver.projectBundleLoading=DEBUG
+	 * 
 	 * @author ak
 	 */
 	public static class Loader {
@@ -419,8 +420,9 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 				return bundle.properties();
 			}
 
+			InputStream inputStream = null;
 			try {
-				InputStream inputStream = bundle.inputStreamForResourcePath(name);
+				inputStream = bundle.inputStreamForResourcePath(name);
 				if(inputStream == null) {
 					return null;
 				}
@@ -435,6 +437,10 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			}
 			catch (IOException exception) {
 				return null;
+			} finally {
+				if (inputStream != null) {
+					try { inputStream.close(); } catch (IOException e) {}
+				}
 			}
 		}
 
@@ -474,17 +480,14 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 						else if (fixedJar.matches(frameworkPattern) || fixedJar.matches(appPattern) || fixedJar.matches(folderPattern)) {
 							normalLibs += jar + File.pathSeparator;
 						}
-						else if (fixedJar.matches(projectPattern) || fixedJar.matches(".*?/ERFoundation.jar") || fixedJar.matches(".*?/ERWebObjects.jar")) {
+						else if (fixedJar.matches(projectPattern) || fixedJar.matches(".*?/erfoundation.jar") || fixedJar.matches(".*?/erwebobjects.jar")) {
 							normalLibs += jar + File.pathSeparator;
 						}
 						else {
 							jarLibs += jar + File.pathSeparator;
 						}
 						String bundle = jar.replaceAll(".*?[/\\\\](\\w+)\\.framework.*", "$1");
-						String excludes = "(JavaVM)";
-						if (isWO54()) {
-							excludes = "(JavaVM|JavaWebServicesSupport|JavaEODistribution|JavaWebServicesGeneration|JavaWebServicesClient)";
-						}
+						String excludes = "(JavaVM|JavaWebServicesSupport|JavaEODistribution|JavaWebServicesGeneration|JavaWebServicesClient)";
 						if (bundle.matches("^\\w+$") && !bundle.matches(excludes)) {
 							String info = jar.replaceAll("(.*?[/\\\\]\\w+\\.framework/Resources/).*", "$1Info.plist");
 							if (new File(info).exists()) {
@@ -528,8 +531,20 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 										}
 										if (isBundle) {
 											System.setProperty("NSProjectBundleEnabled", "true");
-											allFrameworks.add(classpathFolder.getName());
-											debugMsg("Added Binary Bundle: " + allFrameworks);
+											String bundleName = classpathFolder.getName();
+
+											File buildPropertiesFile = new File(classpathFolder, "build.properties");
+											if (buildPropertiesFile.exists()) {
+												Properties buildProperties = new Properties();
+												buildProperties.load(new FileReader(buildPropertiesFile));
+												if (buildProperties.get("project.name") != null) {
+													// the project folder might be named differently than the actual bundle name
+													bundleName = (String) buildProperties.get("project.name");
+												}
+											}
+											
+											allFrameworks.add(bundleName);
+											debugMsg("Added Binary Bundle (Project bundle): " + bundleName);
 										} else {
 											debugMsg("Skipping binary bundle: " + jar);
 										}
@@ -538,9 +553,8 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 										System.err.println("Skipping '" + projectFile + "': " + t);
 									}
 									break;
-								} else {
-									debugMsg("Skipping, no project: " + projectFile);
 								}
+								debugMsg("Skipping, no project: " + projectFile);
 							}
 						}
 					}
@@ -570,8 +584,11 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			NSNotificationCenter.defaultCenter().addObserver(this, new NSSelector("bundleDidLoad", ERXConstant.NotificationClassArray), "NSBundleDidLoadNotification", null);
 		}
 		
+		// for logging before logging has been setup and configured by loading the properties files
 		private void debugMsg(String msg) {
-			// System.out.println(msg);
+			if ("DEBUG".equals(System.getProperty("er.extensions.appserver.projectBundleLoading"))) {
+				System.out.println(msg); 
+			}
 		}
 		
 		public boolean didLoad() {
@@ -590,6 +607,13 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			if (mainBundle == null) {
 				// AK: when we get here, the main bundle wasn't inited yet
 				// so we do it ourself...
+				
+				if (isDevelopmentModeSafe() && 
+						ERXConfigurationManager.defaultManager().isDeployedAsServlet()) {
+					// bundle-less builds do not appear to work when running in servlet mode, so make it prefer the legacy bundle style 
+					NSBundleFactory.registerBundleFactory(new com.webobjects.foundation.development.NSLegacyBundle.Factory());
+				}
+				
 				try {
 					Field ClassPath = NSBundle.class.getDeclaredField("ClassPath");
 					ClassPath.setAccessible(true);
@@ -619,13 +643,14 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		 * 
 		 * @param n
 		 */
-
-		
-		
 		public void bundleDidLoad(NSNotification n) {
 			NSBundle bundle = (NSBundle) n.object();
-			// System.out.println(bundle.name() + ": " + allFrameworks);
-			allFrameworks.remove(bundle.name());
+			if (allFrameworks.contains(bundle.name())) {
+				allFrameworks.remove(bundle.name());
+				debugMsg("Loaded " + bundle.name() + ". Remaining: " + allFrameworks);
+			} else if (bundle.isFramework()) {
+				debugMsg("Loaded unexpected framework bundle '" + bundle.name() + "'. Ensure your build.properties settings like project.name match the bundle name (including case).");
+			}
 			if (allBundleProps == null) {
 				allBundleProps = new Properties();
 			}
@@ -720,7 +745,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 
 						if (urlAsString.contains(mainBundleName + ".jar")) {
 							try {
-								propertiesPath = new URL(URLDecoder.decode(urlAsString, "UTF-8"));
+								propertiesPath = new URL(URLDecoder.decode(urlAsString, CharEncoding.UTF_8));
 								userPropertiesPath = new URL(propertiesPath.toExternalForm() + userName);
 							}
 							catch (MalformedURLException exception) {
@@ -785,6 +810,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 
 	private String stringFromJar(String jar, String path) {
 		JarFile f;
+		InputStream is = null;
 		try {
 			if (!new File(jar).exists()) {
 				ERXApplication.log.warn("Will not process jar '" + jar + "' because it cannot be found ...");
@@ -793,7 +819,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			f = new JarFile(jar);
 			JarEntry e = (JarEntry) f.getEntry(path);
 			if (e != null) {
-				InputStream is = f.getInputStream(e);
+				is = f.getInputStream(e);
 				ByteArrayOutputStream bout = new ByteArrayOutputStream();
 				int read = -1;
 				byte[] buf = new byte[1024 * 50];
@@ -801,7 +827,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 					bout.write(buf, 0, read);
 				}
 
-				String content = new String(bout.toByteArray(), "UTF-8");
+				String content = new String(bout.toByteArray(), CharEncoding.UTF_8);
 				return content;
 			}
 			return null;
@@ -811,6 +837,16 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		}
 		catch (IOException e1) {
 			throw NSForwardException._runtimeExceptionForThrowable(e1);
+		}
+		finally {
+			if (is != null) {
+				try {
+					is.close();
+				}
+				catch (IOException e) {
+					// ignore
+				}
+			}
 		}
 	}
 	}
@@ -854,9 +890,9 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		String appUrl;
 		if (application().isDirectConnectEnabled()) {
 			appUrl = adapterUrl.replace("/cgi", ":" + application().port() + "/cgi");
-			appUrl += "/" + application().name() + ".woa";
+			appUrl += "/" + application().name() + application().applicationExtension();
 		} else {
-			appUrl = adapterUrl + "/" + application().name() + ".woa/-" + application().port();
+			appUrl = adapterUrl + "/" + application().name() + application().applicationExtension() + "/-" + application().port();
 		}
 		
 		URL url;
@@ -1003,22 +1039,10 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			ClassLoader loader = AppClassLoader.getAppClassLoader();
 			Thread.currentThread().setContextClassLoader(loader);
 		}
-		if (!ERXApplication.isWO54()) {
-			Class arrayClass = NSMutableArray.class;
-			try {
-				Field f = arrayClass.getField("ERX_MARKER");
-			}
-			catch (NoSuchFieldException e) {
-				System.err.println("No ERX_MARKER field in NSMutableArray found. \nThis means your class path is incorrect. Adjust it so that ERExtensions come before JavaFoundation.");
-				System.exit(1);
-			}
-			catch (Exception e) {
-				e.printStackTrace();
-			}
-		}
 		ERXConfigurationManager.defaultManager().setCommandLineArguments(argv);
 		ERXFrameworkPrincipal.setUpFrameworkPrincipalClass(ERXExtensions.class);
 		// NSPropertiesCoordinator.loadProperties();
+		ERXShutdownHook.useMe();
 	}
 
 	/**
@@ -1030,19 +1054,10 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	public void installPatches() {
 		ERXPatcher.installPatches();
 		if (contextClassName().equals("WOContext")) {
-			if (ERXApplication.isWO54()) {
-				setContextClassName("ERXWOContext54");
-			}
-			else {
-				setContextClassName(ERXWOContext.class.getName());
-			}
+			setContextClassName(ERXWOContext.class.getName());
 		}
 		if (contextClassName().equals("WOServletContext") || contextClassName().equals("com.webobjects.jspservlet.WOServletContext")) {
-			if (ERXApplication.isWO54()) {
-				setContextClassName("ERXWOServletContext54");
-			} else {
-				setContextClassName(ERXWOServletContext.class.getName());
-			}
+			setContextClassName(ERXWOServletContext.class.getName());
 		}
 
 		ERXPatcher.setClassForName(ERXWOForm.class, "WOForm");
@@ -1063,23 +1078,6 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		}
 
 		// ERXPatcher.setClassForName(ERXSubmitButton.class, "WOSubmitButton");
-
-		// Fix for 3190479 URI encoding should always be UTF8
-		// See http://www.w3.org/International/O-URL-code.html
-		// For WO 5.1.x users, please comment this statement to compile.
-		com.webobjects.appserver._private.WOURLEncoder.WO_URL_ENCODING = "UTF-8";
-
-		// WO 5.1 specific patches
-		if (ERXProperties.webObjectsVersionAsDouble() < 5.2d) {
-			// ERXWOText contains a patch for WOText to not include the value
-			// attribute (#2948062). Fixed in WO 5.2
-			ERXPatcher.setClassForName(ERXWOText.class, "WOText");
-
-		}
-		// ERXWOFileUpload returns a better warning than throwing a
-		// ClassCastException.
-		// Fixed in WO 5.2
-		// ERXPatcher.setClassForName(ERXWOFileUpload.class, "WOFileUpload");
 	}
 
 	@Override
@@ -1119,10 +1117,15 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		if (!ERXConfigurationManager.defaultManager().isDeployedAsServlet() && (!wasERXApplicationMainInvoked || _loader == null)) {
 			_displayMainMethodWarning();
 		}
+		// try {
+		// 	NSBundle.mainBundle().versionString();
+		// } catch (NoSuchMethodError e) {
+		// 	throw new RuntimeException("No versionString() method in NSBundle found. \nThis means your class path is incorrect. Adjust it so that ERJars comes before JavaFoundation.");
+		// }
 		if (_loader == null) {
 			System.out.println("No loader: " + System.getProperty("java.class.path"));
 		} else if (!_loader.didLoad()) {
-			throw new RuntimeException("ERXExtensions have not been initialized. Please report the classpath and the rest of the bundles to the Wonder mailing list: " + "\nRemaining frameworks: " + (_loader == null ? "none" : _loader.allFrameworks) + "\nClasspath: " + System.getProperty("java.class.path"));
+			throw new RuntimeException("ERXExtensions have not been initialized. Debugging information can be enabled by adding the JVM argument: '-Der.extensions.appserver.projectBundleLoading=DEBUG'. Please report the classpath and the rest of the bundles to the Wonder mailing list: " + "\nRemaining frameworks: " + (_loader == null ? "none" : _loader.allFrameworks) + "\nClasspath: " + System.getProperty("java.class.path"));
 		}
 		if ("JavaFoundation".equals(NSBundle.mainBundle().name())) {
 			throw new RuntimeException("Your main bundle is \"JavaFoundation\".  You are not launching this WO application properly.  If you are using Eclipse, most likely you launched your WOA as a \"Java Application\" instead of a \"WO Application\".");
@@ -1209,7 +1212,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	    _replaceApplicationPathReplace = ERXProperties.stringForKey("er.extensions.ERXApplication.replaceApplicationPath.replace");
 	    
 	    if (_replaceApplicationPathPattern == null && rewriteDirectConnectURL()) {
-	    	_replaceApplicationPathPattern = "/cgi-bin/WebObjects/" + name() + ".woa";
+	    	_replaceApplicationPathPattern = "/cgi-bin/WebObjects/" + name() + applicationExtension();
 	        if (_replaceApplicationPathReplace == null) {
 	        	_replaceApplicationPathReplace = "";
 	        }
@@ -1221,6 +1224,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * If mod_rewrite is being used we don't want the adaptor prefix being part of the redirect.
 	 * @see com.webobjects.appserver.WOApplication#_newLocationForRequest(com.webobjects.appserver.WORequest)
 	 */
+	@Override
 	public String _newLocationForRequest(WORequest aRequest) {
 		return _rewriteURL(super._newLocationForRequest(aRequest));
 	}
@@ -1395,7 +1399,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 				log.info("Instance will not live past " + timeToDie + ":00.");
 				NSLog.out.appendln("Instance will not live past " + timeToDie + ":00.");
 				NSTimestamp now = new NSTimestamp();
-				int s = (timeToDie - ERXTimestampUtility.hourOfDay(now)) * 3600 - ERXTimestampUtility.minuteOfHour(now) * 60;
+				int s = (timeToDie - ERXTimestampUtilities.hourOfDay(now)) * 3600 - ERXTimestampUtilities.minuteOfHour(now) * 60;
 				if (s < 0)
 					s += 24 * 3600; // how many seconds to the deadline
 	
@@ -1419,29 +1423,34 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		}
 	}
 
-	/**
-	 * Creates the request object for this loop. Calls _createRequest(). For WO
-	 * 5.3.
-	 */
-	@SuppressWarnings("all") // Suppress @Override warning for 5.4
-	public WORequest createRequest(String aMethod, String aURL, String anHTTPVersion, NSDictionary someHeaders, NSData aContent, NSDictionary someInfo) {
-		return _createRequest(aMethod, aURL, anHTTPVersion, someHeaders, aContent, someInfo);
+	@Override
+	public WORequest createRequest(String aMethod, String aURL, String anHTTPVersion, Map<String, ? extends List<String>> someHeaders, NSData aContent, Map<String, Object> someInfo) {
+		// Workaround for #3428067 (Apache Server Side Include module will feed
+		// "INCLUDED" as the HTTP version, which causes a request object not to
+		// be created by an exception.
+		if (anHTTPVersion == null || anHTTPVersion.startsWith("INCLUDED")) {
+			anHTTPVersion = "HTTP/1.0";
+		}
+		
+		// Workaround for Safari on Leopard bug (post followed by redirect to GET incorrectly has content-type header).
+		// The content-type header makes the WO parser only look at the content. Which is empty.
+		// http://lists.macosforge.org/pipermail/webkit-unassigned/2007-November/053847.html
+		// http://jira.atlassian.com/browse/JRA-13791
+		if ("GET".equalsIgnoreCase(aMethod) && someHeaders != null && someHeaders.get("content-type") != null) {
+			someHeaders.remove("content-type");
+		}
+
+		if (rewriteDirectConnectURL()) {
+			aURL = adaptorPath() + name() + applicationExtension() + aURL;
+		}
+
+		return new ERXRequest(aMethod, aURL, anHTTPVersion, someHeaders, aContent, someInfo);
 	}
 
 	/**
-	 * Creates the request object for this loop. Calls _createRequest(). For WO
-	 * 5.4.
+	 * @deprecated use {@link #createRequest(String, String, String, Map, NSData, Map)} instead
 	 */
-	@SuppressWarnings("all")
-	// Suppress @Override warning for 5.3
-	public WORequest createRequest(String method, String aurl, String anHTTPVersion, Map<String, ? extends List<String>> someHeaders, NSData content, Map<String, Object> someInfo) {
-		return _createRequest(method, aurl, anHTTPVersion, (someHeaders != null ? new NSDictionary<String, Object>(someHeaders, true) : null), content, (someInfo != null ? new NSDictionary<String, Object>(someInfo, true) : null));
-	}
-
-	/**
-	 * Bottleneck for WORequest creation in WO 5.3 and 5.4 to use an
-	 * {@link ERXRequest} object that fixes a bug with localization.
-	 */
+	@Deprecated
 	protected WORequest _createRequest(String aMethod, String aURL, String anHTTPVersion, NSDictionary someHeaders, NSData aContent, NSDictionary someInfo) {
 		// Workaround for #3428067 (Apache Server Side Include module will feed
 		// "INCLUDED" as the HTTP version, which causes a request object not to
@@ -1510,6 +1519,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * 
 	 * @author ak
 	 */
+	@Override
 	public WOComponentDefinition _componentDefinition(String s, NSArray nsarray) {
 		if(ERXProperties.booleanForKeyWithDefault("er.extensions.ERXApplication.fixCachingEnabled", true)) {
 			// _expectedLanguages already contains all the languages in all projects, so
@@ -1619,7 +1629,6 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	/**
 	 * Overridden to fix that direct connect apps can't refuse new sessions.
 	 */
-
 	@Override
 	public synchronized void refuseNewSessions(boolean value) {
 		boolean success = false;
@@ -1799,6 +1808,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 */
 	// NOTE: if you use WO 5.1, comment out this method, otherwise it won't
 	// compile.
+	// CHECKME this was created for WO 5.2, do we still need this for 5.4.3?
 	@Override
 	public WOResponse handleActionRequestError(WORequest aRequest, Exception exception, String reason, WORequestHandler aHandler, String actionClassName, String actionName, Class actionClass, WOAction actionInstance) {
 		WOContext context = actionInstance != null ? actionInstance.context() : null;
@@ -2235,18 +2245,11 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * Returns true if this app is running in WO 5.4.
 	 * 
 	 * @return true if this app is running in WO 5.4
+	 * @deprecated Wonder is used with WO 5.4 only
 	 */
+	@Deprecated
 	public static boolean isWO54() {
-		if (ERXApplication.isWO54 == null) {
-			try {
-				Method getWebObjectsVersionMethod = WOApplication.class.getMethod("getWebObjectsVersion", new Class[0]);
-				ERXApplication.isWO54 = Boolean.TRUE;
-			}
-			catch (Exception e) {
-				ERXApplication.isWO54 = Boolean.FALSE;
-			}
-		}
-		return ERXApplication.isWO54.booleanValue();
+		return true;
 	}
 
 	/**
@@ -2812,7 +2815,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * Returns whether or not binding debugging is enabled for the given component
 	 * 
 	 * @param componentName the component name
-	 * @return whether or not binding debugging is enabled for the given componen
+	 * @return whether or not binding debugging is enabled for the given component
 	 */
 	public boolean debugEnabledForComponent(String componentName) {
 		return _debugComponents.containsObject(componentName);
@@ -2830,7 +2833,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * @return the request handler key for ajax.
 	 */
 	public static String erAjaxRequestHandlerKey() {
-		return ERXApplication.isWO54() ? "ja": "ajax";
+		return "ja";
 	}
 	
 	/**
